Add Apache Arrow batch creation with user data
- Converted to Maven project structure with proper dependencies
- Added Apache Arrow Java libraries (vector, memory-netty, c-data)
- Created comprehensive user data schema (ID, Name, Age, Email, Salary)
- Implemented Arrow batch creation with 5 sample user records
- Added proper memory management with RootAllocator
- Included serialization to bytes for FFI transfer potential
- Created run.sh script with JVM flags for Java 11+ compatibility
- Updated README with Maven instructions and Arrow features
- Enhanced .gitignore for Maven build artifacts
- Demonstrates zero-copy data exchange foundation between Java and Rust